# accounting-doc-mgmt

./: CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  pyproject.toml
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml  pages.yml  screenshots.yml
docs/: architecture.md  customization.md  diagrams.md  evaluation.md  faq.md  getting-started.md  portfolio-config.json
evals/: golden.json  run.py
examples/: onboard_client.py  walkthrough.md
src/accounting_doc_mgmt/: __init__.py  approval_flow.py  backend.py  capacity_planner.py  cli.py  client_portal_provisioner.py  copilot_index.py  matter_provisioner.py  site_definition.py
tests/: test_approval_flow.py  test_backend.py  test_capacity_planner.py  test_client_portal_provisioner.py  test_copilot_index.py  test_matter_provisioner.py  test_site_definition.py
